--- a/servlet/src/main/webapp/check_balance.html
+++ b/servlet/src/main/webapp/check_balance.html
@@ -8,15 +8,15 @@
 </head>
 <body class="bg-gray-100">
 <div class="max-w-md mx-auto my-10 bg-white p-8 rounded-lg shadow-lg">
-    <h2 class="text-2xl font-bold mb-4 text-blue-500">Check Account Balance</h2>
+    <h2 class="text-2xl font-bold mb-4 text-blue-600">Check Account Balance</h2>
     <form action="checkBalance" method="post">
         <div class="mb-4">
             <label for="account_id" class="block text-gray-700">Account ID:</label>
-            <input type="text" id="account_id" name="account_id" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+            <input type="text" id="account_id" name="account_id" placeholder="Enter Your account id" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
         </div>
         <div class="mb-4">
             <label for="password" class="block text-gray-700">Password:</label>
-            <input type="password" id="password" name="password" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+            <input type="password" id="password" name="password" placeholder="Enter Your account password" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
         </div>
         <div>
             <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Check Balance</button>
