--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -13,8 +13,8 @@
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
         <div class="text-xl font-bold text-blue-700">IBS Bank</div>
         <div>
-            <a href="login.html" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-md transition duration-300">Login</a>
-            <a href="regi.html" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md transition duration-300 ml-2">Register</a>
+            <a href="log-in" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-md transition duration-300">Login</a>
+            <a href="Register" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md transition duration-300 ml-2">Register</a>
         </div>
     </div>
 </nav>
